Modified CSS file to include boilerplate for new exercise

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
-
-.flex-container {
-}
-
-  .flex-container div {
-    background: #acf6ef;
-    border: 4px solid  #4b44f8;
-    height: 100px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  .menu-container {
+    color: #fff;
+    background-color: #8abef9;  /* Blue */
+    padding: 20px 0;
+  }
+  
+  .menu {
+    border: 1px solid #fff;  /* For debugging */
+    width: 900px;
   }
