--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   
   .menu-container {
     display: flex;
+    justify-content: center;
     color: #fff;
     background-color: #8abef9;  /* Blue */
     padding: 20px 0;
