--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@
   }
   
   .menu {
+    display: flex;
+    justify-content: space-around;
     border: 1px solid #fff;  /* For debugging */
     width: 900px;
   }
